# azure-iot-mqtt-basic-provision

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azdpsprovision.cpp  aziothelper.h  iot_sample_common.c  iot_sample_common.h  paho_iot_provisioning_sample.c
.devcontainer/: devcontainer.json  settings-codespace.json
